2008-02-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.in: Check for gmtime_r. Missing part of bug #511807.

2008-02-01  Yannig Marchegay  <yannig@marchegay.org>

	* configure.in: Add oc since oc.po is back.

2008-01-31  Michael Natterer  <mitch@imendio.com>

	* glib/gmem.c: use %G_GSIZE_FORMAT instead of %lu since sizes have
	changed from gulong to gsize in this file.

2008-01-30  Johan Dahlin  <johan@gnome.org>

	* configure.in: Remove oc since oc.po is gone.

2008-01-30  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* glib/gchecksum.c:
	* glib/gtestutils.c:
	* glib/gutils.c:

	Fixed gtk-doc warnings by updating the documentation of
	various functions.

2008-01-29  Christian Persch  <chpe@gnome.org>

	* docs/reference/glib/tmpl/macros_misc.sgml: G_GNUC_[PRETTY_]FUNCTION
	are deprecated since 2.16, not 2.14.

2008-01-29 14:58:31  Tim Janik  <timj@imendio.com>

	* glib/gmem.[hc]: changed size argument type from gulong to gsize as
	discussed on gtk-devel-list:
	  http://mail.gnome.org/archives/gtk-devel-list/2007-March/msg00062.html
	this should be ABI compatible on all platforms except win64 for which
	no ABI binding port exists yet.

2008-01-29  Sebastian Wilhelmi  <wilhelmi@google.com>

	* tests/threadpool-test.c (test_thread_pools): Grab
	thread_counter_pools LOCK when increasing
	leftover_task_counter. Fixes race in test. (#512624, Simon Murray)

2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.4 ===

	* NEWS: Updates

2008-01-28  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Check for gmtime_r.  
	* glib/gtimer.c: Use gmtime_r when available.  (#511807,
	Sebastian Dröge)

2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/gnode.[hc]: Move docs inline.  (#316260, Philippe Blain)

2008-01-27  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutf8.c (g_utf8_strreverse): Document limitations